# cosmic-ext-applet-gamemode-status

./: Cargo.toml  README.md  justfile
.github/workflows/: release.yml
i18n/en/: cosmic_ext_applet_gamemode_status.ftl
i18n/sv/: cosmic_ext_applet_gamemode_status.ftl
res/: dev.DBrox.CosmicGameModeStatus.desktop  dev.DBrox.CosmicGameModeStatus.metainfo.xml  packaging.just
src/: app.rs  applet.rs  dbus.rs  localization.rs  main.rs
