[package]
name = "cosmic-ext-applet-gamemode-status"
version = "0.1.2"
edition = "2021"
authors = ["D-Brox <davidfbg00@gmail.com>"]
description = "GameMode status applet for the COSMIC DE"
readme = "README.md"
license = "GPL-3.0"
homepage = "https://github.com/D-Brox/cosmic-ext-applet-gamemode-status"
repository = "https://github.com/D-Brox/cosmic-ext-applet-gamemode-status.git"
rust-version = "1.80"

[dependencies]
futures-util = "0.3.30"
i18n-embed-fl = "0.9.1"
rust-embed = "8.3.0"
serde = "1.0.209"
sysinfo = "0.33.1"
zbus = "5.5.0"
zbus_macros = "5.5.0"
zvariant = "5.4.0"

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
default-features = false
features = ["applet", "tokio", "wayland"]

[dependencies.i18n-embed]
version = "0.15"
features = ["fluent-system", "desktop-requester"]

[package.metadata.deb]
license-file = "LICENSE"
assets = [
    ["target/release/cosmic-ext-applet-gamemode-status", "usr/bin/", "755"],
    ["res/dev.DBrox.CosmicGameModeStatus.desktop", "usr/share/applications/", "644"],
    ["res/dev.DBrox.CosmicGameModeStatus.metainfo.xml", "usr/share/metainfo/", "644"],
]
depends = ["gamemode","libc6","libsystemd0","libxkbcommon0"]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/cosmic-ext-applet-gamemode-status", dest = "/usr/bin/", mode = "755" },
    { source = "LICENSE", dest = "/usr/share/doc/cosmic-ext-applet-gamemode-status/LICENSE", doc = true, mode = "644" },
    { source = "res/*.desktop", dest = "/usr/share/applications/", mode = "644" },
]
[package.metadata.generate-rpm.requires]
glibc = "*"
gamemode = "*"
systemd-libs = "*"
libxkbcommon = "*"


[profile.release]
strip = true
lto = true

# [patch.'https://github.com/pop-os/libcosmic']
# libcosmic = { path = "../libcosmic" }
